--- a/package.xml
+++ b/package.xml
@@ -15,12 +15,14 @@
   <build_depend>cmake_modules</build_depend>
   <build_depend>robot_transforms</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>kdl_parser</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>robot_transforms</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>nav_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>kdl_parser</run_depend>
 </package>
